Update initial commit

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- Add this in the <head> section of your index.html -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-jD15T4fF+9h4O8vVozVdNblJlVY1dERr0v5a2/5R7FAlEYXv7UqX3cbh8wnnUo9seuRWkA2VtKFnEbdF5TyShw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  
     <title>React App</title>
   </head>
   <body>
